Fixed Mode Selection UI from not showing proper preference on page load

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,6 +139,24 @@ fc-theme-standard td,
     inset -1px -1px 0px 0px var(--button-hover);
 }
 
+.window-box-effect {
+  border: 1px solid var(--border-outer); 
+  background: var(--background-alt);
+  box-shadow: 1px 2px var(--border-outer), inset 1px 1px 0px 0px var(--border-inner), inset -1px -1px 0px 0px var(--button-hover);
+  padding: 0px 0.3em;
+  display:inline-block;
+  align-items: center;
+  padding: 0.2em;
+}
+
+.window-box-inner {
+  padding:0em 0.5em;
+  margin: 2px 4px 4px 4px;
+  border: 1px solid var(--border-outer);
+  background-color: var(--background-inner);
+  box-shadow: -1px -1px 0px 0px var(--button-hover), 1px 1px 0px 0px var(--border-inner), inset 1px 1px 0px 0px var(--border-inner), inset -1px -1px 0px 0px var(--button-hover);
+}
+
 /* The daily content */
 .fc-view-harness,
 .fc-popover-body {
@@ -300,6 +318,10 @@ div.fc-scrollgrid-sync-inner:not(.fc-daygrid-day-frame) {
 .link-like {
   color: var(--text-linked); /*Richmond 233*/
   cursor: pointer;
+}
+
+.selected-preference {
+  filter: drop-shadow(0px 0px 0.25em var(--border-outer));
 }
 
 .fc-event-title {
